--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /Atividade1/node_modules
+/Atividade2/node_modules
+/Atividade3/node_modules
+/Atividade4/node_modules
+/Atividade5/node_modules
+/Atividade6/node_modules
+/Atividade7/node_modules
+/Atividade8/node_modules
+/Atividade9/node_modules
+/Atividade10/node_modules
