--- a/Atividade1/package.json
+++ b/Atividade1/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "body-parser": "^1.19.0",
+    "express": "^4.16.4",
+    "nodemon": "^2.0.6"
   },
   "devDependencies": {},
   "description": ""
